# design-patterns-python

./: .gitignore  pyproject.toml
.github/workflows/: main.yml  test.yml
builder_pattern/: builder.py
tests/builder_pattern/: test_builder.py
